2010-07-12  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/admin/assistant/models.py:
	Add prefix and requiresPorter properties to the wizard Consumer
	models.
	* flumotion/admin/assistant/save.py:
	Use the Consumer prefix property instead of getting it from the
	consumerType.
	* flumotion/component/consumers/disker/wizard_gtk.py:
	* flumotion/component/consumers/httpstreamer/wizard_gtk.py:
	* flumotion/component/consumers/shout2/wizard_gtk.py:
	* flumotion/scenario/live/wizard_gtk.py:
	Use the Consumer requiresPorter property instead of getting it from
	the consumerType.

2010-07-09  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/extern/log/log.py:
	Add comments about keeping the logging module generic.

2010-07-09  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/extern/log/log.py:
	Remove mentions of Flumotion from log.py, it should be left as a
	generic module.

2010-07-09  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent010.py:
	Don't throw an exception when DEBUG_BIN_TO_DOT_FILE is not found.

2010-07-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/manager/config.py:
	* flumotion/twisted/flavors.py:
	flavours.ManagerComponentState has the type as a value in a dict so we
	need the itemgetter instead of the attrgetter.

2010-07-08  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/combiners/composite/composite.xml:
	* flumotion/manager/config.py:
	* flumotion/test/test.xml:
	* flumotion/test/test_admin_config.py:
	* flumotion/test/test_config.py:
	* flumotion/test/test_manager_config.py:
	* flumotion/test/test_registry.py:
	Update tests with deprecated content

2010-07-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/test/test_component_httpstreamer.py:
	Remove old test

2010-07-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Jan

	* flumotion/common/common.py: